@@ -89,14 +89,22 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 			</plugin>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.0</version>
-				<configuration>
-					<source>13</source> <!-- 1.8,1.9,1.10,11,12,13 -->
-					<target>13</target>
-				</configuration>
-			</plugin>
+	            <groupId>org.apache.maven.plugins</groupId>
+	            <artifactId>maven-compiler-plugin</artifactId>
+	            <version>3.8.0</version>
+	            <configuration>
+	                <release>13</release> <!-- <release>13</release> -->
+	                <compilerArgs>--enable-preview</compilerArgs>
+	            </configuration>
+	        </plugin>
+	        <plugin>
+		      	<groupId>org.apache.maven.plugins</groupId>
+		      	<artifactId>maven-surefire-plugin</artifactId>
+		      	<version>3.0.0-M3</version>
+		      	<configuration>
+		        	<argLine>--enable-preview</argLine>
+		      	</configuration>
+		    </plugin>
 			<plugin>
 		        <!-- Build an executable JAR -->
 		        <groupId>org.apache.maven.plugins</groupId>
